--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,8 @@
     <h1>Home</h1>
     {% for post in posts %}
         <div class="post">
-            <p>{{ post[1] }}</p>
-            <img src="{{ url_for('static', filename='uploads/' + post[0]) }}" alt="Post image">
+            <p>{{ post['username'] }}</p>
+            <img src="{{ base_url }}{{ url_for('static', filename='uploads/' + post['image']) }}" alt="Post image">
         </div>
     {% endfor %}
 {% endblock %}
